-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 18.0.0
-
None
-
7e6e3e5c1 (18.0)
- open Preferences > Devices > Devices
- add a Android (emulator) device
- the settings for the new Android device do not show the "Start AVD" and other buttons related to Android emulators
- closing and re-opening the preferences dialog does not help
- the buttons only appear after a restart of Qt Creator