Android: Fix buttons in device settings for emulators

The additional device buttons (starting and removing the AVD etc) were
not shown for devices that were created during that session of Qt
Creator. We need to call `addActionsIfNotFound` for newly created
devices, which it didn't because in that case `fromMap` is not called.

Fixes: QTCREATORBUG-33727
Change-Id: Ic6bb252deba7864e102f6bcc58728b2035baa3e3
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>