src/plugins/android/androiddevice.h
@@ -51,11 +51,12 @@ public:
 
     void startAvd();
 
+    void addActionsIfNotFound();
+
 protected:
     void fromMap(const Utils::Store &map) final;
 
 private:
-    void addActionsIfNotFound();
     ProjectExplorer::IDevice::DeviceInfo deviceInformation() const override;
     ProjectExplorer::IDeviceWidget *createWidget() override;
     ProjectExplorer::DeviceProcessSignalOperation::Ptr signalOperation() const override;
